public/index.css
body {
    font-family: 'Comfortaa';
    background-color: #f4f4f4;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }
  .options {
    z-index: 10000;
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    transition: all 1s ease;
    opacity: 1;
    transition-behavior: allow-discrete;
  }
  .option {
    align-content: center;
    background-color: white;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
    max-width: 300px;
    overflow: auto;
    font-size: 18px;
    font-weight: 800;
  }
  
  #form-container {
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-bottom: 50vh;
  }
  
  #suggestion-input {
    font-family: 'Comfortaa';
    width: 280px;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
    font-size: 16px;
    margin-bottom: 12px;
  }
  
  #submit-button {
    font-family: 'Comfortaa';
    margin: 0;
    width: 300px;
    padding: 10px 20px;
    border-radius: 5px;
    border: none;
    background-color: #007bff;
    color: white;
    font-size: 16px;
    cursor: pointer;
  }
  
  #suggestions-container {
    position: relative;
    width: 90vw;
    height: 90vh;
    background-color: #e0e0e0;
    border-radius: 15px;
    overflow: hidden;
    display: flex;
    position: relative;
    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
  }

  /* Define the fade-in animation */
  @keyframes fadeIn {
    from {
      opacity: 0;
      background-color: white;
    }
    to {
      background-color: #007bff;
      opacity: 1;
    }
  }
  .suggestion-box {
    color: white;
    display: flex;
    flex-direction: row;
    position: absolute;
    padding: 10px;
    background-color: white;
    border-radius: 10px;
    /* border: 1px solid #ccc; */
    font-size: 18px;
    max-width: 300px; /* Ensure boxes don't get too wide */
    word-wrap: break-word;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease;
    opacity: 0; /* Start with opacity 0 */
  }
  
  .suggestion-box:hover {
    transform: scale(1.05);
    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
  }
  
  .close-button {
    position: relative;
    right: -5px;
    margin-left: 2px;
    color: red;
    cursor: pointer;
    font-size: 20px;
    padding: none;
    display: none; /* Hidden by default */
  }
  p{
    margin: 0;
    padding: 0;
  }
  .suggestion-box:hover .close-button {
    display: flex; /* Show on hover */
  }
  

  /* Login page */

#form-container {
  position: relative;
  bottom: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 20vh;
}
#topic {
  font-size: 24px;
  font-weight: 500;
  margin-bottom: 32px;
  width: 280px;
  overflow-wrap: anywhere;
}
#error-message {
  color: red;
  display: none; /* Hidden by default */
  margin-top: 10px;
}

#class-input {
  text-align: center;
  width: 280px;
  padding: 12px;
  border-radius: 5px;
  border: 1px solid #ccc;
  font-size: 16px;
  margin-bottom: 12px; /* Space between input and buttons */
}

#join-button, #create-button {
  width: 300px;
  padding: 12px;
  margin: 5px;
  border-radius: 5px;
  border: none;
  background-color: #007bff;
  color: white;
  font-size: 16px;
  cursor: pointer;
}

#join-button:hover, #create-button:hover {
  background-color: #0056b3;
}

/* Add this CSS to your existing stylesheet */

.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1000; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
}

.modal-content {
  border-radius: 10px;
  font-size: 36px;
  color: white;
  background-color: #007bff;
  margin-left: auto; /* 15% from the top and centered */
  margin-right: auto;
  margin-top: 10vh;
  padding: 20px;
  width: 80%; /* Could be more or less, depending on screen size */
  max-width: 600px; /* Limit the max width */
  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
}
#settings-modal-content{
  width: 500px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#topic-input {
  font-family: 'Comfortaa';
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #ccc;
  font-size: 16px;
  margin-bottom: 12px;
  margin-top: 12px;
}
.option-input {
  font-family: 'Comfortaa';
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #ccc;
  font-size: 16px;
  margin-bottom: 12px;
  margin-top: 12px;
}
#add-option-button, #clear-option-button{
  margin: auto;
  font-family: 'Comfortaa';
  padding: 10px 20px;
  border-radius: 5px;
  border: none;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 8px;
  background-color: white;
  font-size: 16px;
  cursor: pointer;
}
#voting-modal{
  margin: 0;
  position: absolute;
  display: none; /* Hidden by default */
}
#voting-modal-content{
  padding-top: 12px;
  display: flex;
  flex-direction: column;
}
.vote_specific{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: white;
  border-radius: 5px;
  margin-top: 8px;
}
.vote_specific p {
  background-color: white;
  color: black;
  font-size: 34px;
  padding: 8px;
  border-radius: 5px;
}
#buttons{
  display: flex;
  flex-direction: column;
}
#buttons button{
  font-family: 'Comfortaa';
  margin: 0;
  margin-top: 8px;
  width: 300px;
  padding: 10px 20px;
  border-radius: 5px;
  border: none;
  background-color: #007bff;
  color: white;
  font-size: 16px;
  cursor: pointer;
}
#inputs{
  display: contents;
}
#options-list{
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.close-modal {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close-modal:hover,
.close-modal:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-blur {
  filter: blur(10px);
}

